@@ -338,6 +338,9 @@ BUGFIXES:
   ZOOKEEPER-1256: ClientPortBindTest is failing on Mac OS X
   (Camille via phunt)
 
+  ZOOKEEPER-2498: Potential resource leak in C client when processing
+  unexpected / out of order response (Michael Han via rgs)
+
 IMPROVEMENTS:
   ZOOKEEPER-2024 Major throughput improvement with mixed workloads (Kfir Lev-Ari via shralex)
 
